Fixed routting issue, views work for cuisine views folder.
Co-authored-by: Mitchell Gantz <mgantz22@icloud.com>
Co-authored-by: John <john.lenz27@gmail.com>.

--- a/BestRestaurants/Views/Cuisines/Create.cshtml
+++ b/BestRestaurants/Views/Cuisines/Create.cshtml
@@ -11,5 +11,5 @@
   @Html.LabelFor(model => model.CuisineType)
   @Html.TextBoxFor(model => model.CuisineType)
   <br>
-  <input type="submit" value="Add new cuisine"/>
+  <input type="submit" class="button" value="Add new cuisine"/>
 }
