--- a/BestRestaurants/Views/Cuisines/Index.cshtml
+++ b/BestRestaurants/Views/Cuisines/Index.cshtml
@@ -15,7 +15,7 @@
 <ul>
     @foreach(Cuisine cuisine in Model)
     {
-        <li>@Html.ActionLink($"{cuisine.CuisineType}", "Cuisine", new { id = cuisine.CuisineId})</li>
+        <li>@Html.ActionLink($"{cuisine.CuisineType}", "Details", new { id = cuisine.CuisineId})</li>
     }
 
 </ul>
