Routing Resteraunts with Html helpers
Co-authored-by: Gantz <mgantz22@icloud.com>
Co-authored-by: John Lenz <john.lenz27@gmail.com>

--- a/BestRestaurants/Views/Cuisines/Index.cshtml
+++ b/BestRestaurants/Views/Cuisines/Index.cshtml
@@ -15,10 +15,11 @@
 <ul>
     @foreach(Cuisine cuisine in Model)
     {
-        <li>@Html.ActionLink($"{cuisine.CuisineType}", "Details", new { id = cuisine.CuisineId})</li>
+        <li>@Html.ActionLink($"{cuisine.CuisineType}", "Details", new { id = cuisine.CuisineId}) | @cuisine.Restaurant.Name</li>
     }
 
 </ul>
 
 
 <p>@Html.ActionLink("Add A Cuisine", "Create", "Cuisines")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
