WIP routing and allowing relationship between Categories and Items

--- a/BestRestaurants/Views/Cuisines/Details.cshtml
+++ b/BestRestaurants/Views/Cuisines/Details.cshtml
@@ -7,9 +7,9 @@
 
 <h2>Resteraunts that serve placeholder</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)<h3>
-<h3>@Html.DisplayNameFor(model => model.Category): @Html.DisplayFor(model => model.Category.Name)<h3>
+<h3>@Html.DisplayNameFor(model => model.CuisineType): @Html.DisplayFor(model => model.CuisineType)<h3>
+<h3>@Html.DisplayNameFor(model => model.Restaurant): @Html.DisplayFor(model => model.Restaurant.Name)<h3>
 
-<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.ItemId })</p>
-<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.ItemId })</p>
+<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.CuisineId })</p>
+<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.CuisineId })</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
